--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <br>
        <br>
        <center>
-         <b>Salvador,Agosto</b>
+         <b>Salvador,15 de Agosto</b>
       <hr>   
       <br>
        </center>
