--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8" />
   
     </head>
-    <link rel="stylesheet" href="arquivo.css">
-    Home
+    	
+    Home  <a href="https://caiojc7.github.io/site20182/index2.html">Resumido </a>
 <script src="arquivo.js"></script>
     <center>
     <h2>Caio Júlio César de Jesus D'Almeida</h2>
