--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles.css">
 
 <meta charset="utf-8" />
+    </head>
+      <a href="https://caiojc7.github.io/site20182/index2.html">Home </a>
 <body>
 <center>
     <h2>Caio Júlio César de Jesus D'Almeida</h2>
